cfn/st/aws-rds.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Setup Singtel RDS MySQL DB Stack",

  "Parameters": {
    "Environment" : {
      "Description" : "Environment",
      "Type": "String",
      "Default": "stage"
    },
    "Region": {
      "Description": "AWS Region",
      "Type": "String",
      "Default": "us-east-1"
    },
    "MySqlMasterUsername" : {
      "Description" : "MySQL Master Username",
      "Type": "String",
      "NoEcho": "true"
    },
    "MySqlMasterUserPassword" : {
      "Description" : "MySQL Master user password",
      "Type": "String",
      "NoEcho": "true"
    },
    "VPC": {
      "Description": "ID of the VPC for the server stacks",
      "Type": "String"
    },
    "PublicSubnetA": {
      "Description": "ID of the public subnet A",
      "Type": "String"
    },
    "PublicSubnetB": {
      "Description": "ID of the public subnet B",
      "Type": "String"
    },
    "PublicSubnetC": {
      "Description": "ID of the public subnet C",
      "Type": "String"
    },
    "PrivateSubnetA": {
      "Description": "ID of the private subnet A",
      "Type": "String"
    },
    "PrivateSubnetB": {
      "Description": "ID of the private subnet B",
      "Type": "String"
    },
    "PrivateSubnetC": {
      "Description": "ID of the private subnet C",
      "Type": "String"
    }
  },

  "Outputs": {
    "MySqlEndpointAddress": {
      "Value": { "Fn::GetAtt" : [ "MySqlServer", "Endpoint.Address"] },
      "Description" : "MySQL host name"
    },
    "MySQLEndpointPort": {
      "Value": { "Fn::GetAtt" : [ "MySqlServer", "Endpoint.Port"] },
      "Description" : "MySQL port number"
    }
  },

  "Resources": {
    "MySqlSubnetGroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties" : {
        "DBSubnetGroupDescription" : "Subnets available for the RDS DB Instance",
        "SubnetIds" : [
          { "Ref" : "PrivateSubnetA" },
          { "Ref" : "PrivateSubnetB" },
          { "Ref" : "PrivateSubnetC" }
        ]
      }
    },
    "MySqlSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "MySql Access for internal servers",
        "VpcId" : { "Ref" : "VPC" },
        "SecurityGroupIngress": [
          {
            "CidrIp": "192.168.0.0/16",
            "IpProtocol" : "tcp",
            "FromPort": "3306",
            "ToPort": "3306"
          }
        ],
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol" : "tcp",
            "FromPort": "3306",
            "ToPort": "3306"
          }
        ]
      }
    },
    "MySqlParameterGroup": {
      "Type": "AWS::RDS::DBParameterGroup",
      "Properties": {
        "Description": "Custom parameters required by the Application",
        "Family": "mysql5.7",
        "Parameters": {
          "log_bin_trust_function_creators": 1
        }
      }
    },
    "MySqlServer": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "40",
        "BackupRetentionPeriod": "7",
        "DBInstanceClass": "db.t2.medium",
        "DBParameterGroupName": { "Ref": "MySqlParameterGroup" },
        "DBSubnetGroupName": { "Ref": "MySqlSubnetGroup"},
        "VPCSecurityGroups": [ { "Ref": "MySqlSecurityGroup" } ],
        "Engine": "MySQL",
        "EngineVersion": "5.8",
        "MasterUsername": { "Ref": "MySqlMasterUsername" },
        "MasterUserPassword": { "Ref": "MySqlMasterUserPassword" },
        "MultiAZ": "true",
        "Tags": [ { "Key" : "Name", "Value" : { "Ref": "Environment" } } ]
      }
    }
  }
}
